# ChatCut

./: .gitignore  DESIGN.md  README.md  package.json  tsconfig.json  turbo.json
.omc/: project-memory.json
.omc/plans/: phase-1-5-status.md  phase-3-headless-renderer.md  phase-5-status.md  phase-5.md  tool-evolution-finalization.md  wiring-audit-remediation-status.md  wiring-audit-remediation.md
.omc/sessions/: 396a04be-cdab-491f-898d-21d2cf10929c.json  71d51cf6-e7d7-42f9-aa0c-1f805a1aa555.json  91f93d63-ecc1-4b36-a475-04e3847baae8.json  b047c588-2d53-471f-a10a-3d925daa343c.json  ccec5851-c4a0-4c48-8f51-5c7a294fdd60.json  fe5dc6b2-046f-4fcb-8cc9-bda93c819630.json
.omc/specs/: deep-interview-tool-evolution-clarification.md
apps/agent/: package.json  (+1 more)
docs/: advanced-agent-borrowing-review.md  chatcut-agent-advanced-agent-borrowing.md  chatcut-agent-advanced-agent-borrowings.md  chatcut-agent-system.md  chatcut-architecture.md  chatcut-discussion-summary.md  chatcut-fanout-exploration.md  chatcut-memory-layer.md  chatcut-plan.md  chatcut-research.md  chatcut-review-resume.md  chatcut-tool-system-evolution.md  chatcut-ux-design.md  chatcut-ux-vision.md  chatcut-wiring-audit.md  intent-ux-design-review.md
services/gpu/: MODAL_IMAGE.md  README.md  modal_app.py  pyproject.toml  pytest.ini  ruff.toml
services/gpu/src/: asset_fetcher.py  auth.py  handlers.py  jobs.py  r2.py  render.py  timeline_to_mlt.py
services/gpu/tests/: test_asset_fetcher.py  test_auth.py  test_handlers.py  test_jobs.py  test_r2.py  test_render.py  test_render_e2e.py  test_timeline_to_mlt.py
(+239 files in other folders)
