[project]
name = "chatcut-gpu"
version = "0.1.0"
description = "ChatCut GPU service — Modal-deployed renderer + GPU workloads"
requires-python = ">=3.12"
dependencies = [
    "modal>=0.66",
    "boto3>=1.35",
    "pydantic>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "ruff>=0.7",
    "moto[s3]>=5.0",
]

[tool.uv]
package = false
